# job-application-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
job_agent/: __init__.py  __main__.py  artifacts.py  config.py  context.py  db.py  outreach.py  server.py  service.py  sources.py  startup_sources.py  tailor.py  yc_source.py
job_agent/adapters/: __init__.py  _browser.py  base.py  greenhouse.py  lever.py  registry.py
job_agent/static/: app.js  index.html  styles.css
profile/: candidate_context.json  resume_template.tex
scripts/: build_candidate_context.py  build_github_project_dossier.py  start_agent.sh
tests/: test_agent.py
